--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,30 +10,30 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t rallycoding/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true rallycoding/react-test npm test
+      - run: docker build -t milkomilchev/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true milkomilchev/react-test npm test
 
-      - run: docker build -t rallycoding/multi-client ./client
-      - run: docker build -t rallycoding/multi-nginx ./nginx
-      - run: docker build -t rallycoding/multi-server ./server
-      - run: docker build -t rallycoding/multi-worker ./worker
+      - run: docker build -t milkomilchev/multi-client ./client
+      - run: docker build -t milkomilchev/multi-nginx ./nginx
+      - run: docker build -t milkomilchev/multi-server ./server
+      - run: docker build -t milkomilchev/multi-worker ./worker
 
-      - run: docker push rallycoding/multi-client
-      - run: docker push rallycoding/multi-nginx
-      - run: docker push rallycoding/multi-server
-      - run: docker push rallycoding/multi-worker
+      - run: docker push milkomilchev/multi-client
+      - run: docker push milkomilchev/multi-nginx
+      - run: docker push milkomilchev/multi-server
+      - run: docker push milkomilchev/multi-worker
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
 
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+        uses: milkomilchev/beanstalk-deploy@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: multi-gh
-          environment_name: Multigh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          region: us-east-1
+          application_name: docker-react
+          environment_name: Docker-react-env
+          existing_bucket_name: elasticbeanstalk-eu-central-1-821327299525
+          region: eu-central-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
