--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,12 +27,12 @@ jobs:
         run: zip -r deploy.zip . -x '*.git*'
 
       - name: Deploy to EB
-        uses: milkomilchev/beanstalk-deploy@v18
+        uses: milkomilchev/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-react
-          environment_name: Docker-react-env
+          application_name: multi-docker
+          environment_name: multi-docker-env
           existing_bucket_name: elasticbeanstalk-eu-central-1-821327299525
           region: eu-central-1
           version_label: ${{ github.sha }}
